// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama AssetHub Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`Kusama AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "HsqMZwoz6VgBp3Jir9EHVXwWxptE4Xh43YBXfGpAgpUTnL3",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "HzfiNBWVbCNvLqRHZmYkv8ScreioX1DdBiDKHE2t5S1M8PD",
      "callHash": "(hash)",
      "multisig": "HsqMZwoz6VgBp3Jir9EHVXwWxptE4Xh43YBXfGpAgpUTnL3",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "GLcUoRavLfhAqf61DFeebFWAeCnmwDsTAToF23qw5Sz5Pne",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "DvhvL8EozX7EGGhKqaUUUnuxaCxdizy8z6pUzHreMVcNeCU",
      "callHash": "(hash)",
      "multisig": "GLcUoRavLfhAqf61DFeebFWAeCnmwDsTAToF23qw5Sz5Pne",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "F7kjysKuGW5MLfBqDcxT1Jrf8x8oPmCsQfq3PRsZqbtMm2g",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama AssetHub Multisig Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HxgqXnQwoCVDvPu23qdXA1ABqxC3o92ue1Bvk2U8D2J75gb",
      "callHash": "(hash)",
      "multisig": "D1xMyYBGZcXcDNE9CHM2zan5y5MoL41V2A4FvnXZAGDFavS",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
